openstack-dashboard/dashboard/static/dashboard/css/style.css
/* ... */
.switcher_bar h4 {
    color: #6fabc4;
    font-size: 10px;
    text-transform: uppercase;
    font-weight: normal;
    padding: 0;
}


.switcher_bar ul {
    border: 1px solid #c0d9e4;
    margin-left: -1px;
    width: 190px;
}

.switcher_bar li a:hover{
  background: #92d6f1;
}


#usage {
    margin-bottom: 25px;
    height: 125px;
}

.usage_block {
      background: #e8f8ff;
  color: #84b6c5;
  border: 1px solid #afe3fb;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
    float: left;
    width: 29%;
    margin-right: 5%;
    min-height: 125px;
}

.usage_block.last {
    margin-right: 0;
}


.usage_block h3 {
  background: #cef0ff;
  color: #4fa5bf;
  font-weight: normal;
  padding: 0 0 0 10px;
  border-bottom: 1px solid #c6e7f5;
  -webkit-border-top-left-radius: 5px;
  -webkit-border-top-right-radius: 5px;
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-topright: 5px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}
.usage_block ul {
    margin: 10px;
}

.usage_block .quantity { font-size: 25px; }

.usage_block li {
  font-size: 11px;
  margin: 0 0 15px 0;
}

.usage_block .unit{
  font-size: 11px;
  text-transform: uppercase;
  padding: 0 0 0 1px;
}

.table_header {
  overflow: auto; /* Triggers clearing if all contained elements are floated */
  margin-bottom: 10px;
}

.table_title h3, .table_header h3 {
    font-family: anivers;
    font-weight: normal;
    font-size: 24px;
    margin-bottom: 5px;
    float: left;
}

th {
    background: #f1f1f1;
}


small {
    font-size: 11px;
}

#user_info {
    position: relative;
    z-index: 100;
    padding-right: 25px;
    padding-top: 25px;
    color: #888;
}

#user_info > a {
    margin-left: 25px;
    font-size: 11px !important;
}

.main_nav {
    list-style: none;
    width: 222px;
    float: left;
    margin-bottom: 15px;
}

.main_nav a {
  color: #999;
  width: 185px;
  padding: 10px;
  display: block;
  margin-right: -3px;
  margin-left: 18px;
}

.main_nav a.active {
  background: #fff;
  border: 2px solid #d8d8d8;
  border-right: 0;
  border-bottom-color: #ccc;
}

table form {
    margin-bottom: 0;
    width: 1px;
}

.alert-block .alert-actions {
  margin-top: -23px;
  margin-right: -23px;
}

.modal > form,
.alert-actions > form {
    margin-bottom: 0;
}

.alert-block p:last-child {
  margin-bottom: 0;
}

#actions.single {
    width: 90px;
}

.table-striped tr td {
  transition: background 0.2s;
  -webkit-transition: background 0.2s;
  -moz-transition: background 0.2s;
  -o-transition: background 0.2s;
}

.inspect {
    float: left;
    display: block;
    margin-top: 5px;
    margin-right: 25px;
}

.table {
    margin-bottom: 50px;
}

.table tr td {
    vertical-align: middle;
}

.table tr.empty td {
  text-align: center;
}

.table tfoot tr td {
  border-top: 1px solid #DDD;
  background-color: #F1F1F1;
  font-size: 11px;
  line-height: 14px;
}

.table_actions {
    float: right;
    min-width: 400px;
}

.table_actions .table_search {
    display: inline-block;
}

.table_search input {
  background: url(../images/search.png) no-repeat 195px 5px;
  display: inline-block;
}

.table_actions a, .table_actions button {
    float: right;
    margin-left: 10px;
}

.table_actions button.filter {
  margin-left: 0;
}

.table_header .table_actions {
  min-width: 0;
}

.table_header .table_actions a, .table_header .table_actions button {
  display: inline-block;
  float: none;
}

.table_actions form {
    float: right;
    margin-left: 10px;
}

.hidden {
  display: none;
}

.status_box {
  font-size: 24px;
  width: 100%;
  min-width: 775px;
  float: left;
  border: 1px solid;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  font-family: "anivers";
}

.status_box.good {
  background-color: #e9ffe8;
  color: #7ec67b;
  border-color: #9edd9b;
}

.status_box.good li.block {
    color: #7ec67b;
}

.status_box.medium {
  background-color: #ffffe8;
  color: #eada83;
  border-color: #ffe37b;
}

.status_box.bad {
  background-color: #ffdbdc;
  color: #ff8080;
  border-color: #ff9a99;
}

.overview {
    font-size: 24px;
}

.status_box.medium .status span, .status_box.medium .overview { color: #d1b100; }
.status_box.bad .status span, .status_box.bad .overview {  color: #eb1400; }
.status_box.good .status { background: url(../images/status_sprite.png) 6px 8px no-repeat; }
.status_box.medium .status { background: url(../images/status_sprite.png) no-repeat 6px -90px; }
.status_box.bad .status { background: url(../images/status_sprite.png) no-repeat 6px -186px; }

.status_box.small {
  width: 100%;
  min-width: 360px;
  margin: 0 0 25px 0;
  float: left;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}

.status_box.small p {
  text-align: center;
  margin: 0;
}

.status_box.small p.overview {
  color: #2a7380;
  margin: -10px 0 5px 0;
}

.status_box.small p.avail {
  width: 100%;
  margin: 0 ;
}

.status_box.small li.block {
  width: 26%;
}

.status_box .status span, .status_box .overview { color: #2e802b; }
.status_box p.avail { margin-right: 0; }

.status_box .overview span {
  text-transform: uppercase;
  font-size: 11px;
}

.status_box p.used {
  font-size: 18px;
  margin: 0 15px 0 0;
  float: left;
  text-align: center;
}

.status_box p.avail {
  font-size: 18px;
  margin: 0 0 0 0;
  float: left;
  text-align: center;
}

.status_box p.avail span, .status_box p.used span {
  font-size: 10px;
  margin-top: -5px;
  text-transform: uppercase;
}

.status_box li.block {
  min-width: 135px;
  width: 17%;
  height: 61px;
  float: left;
  padding: 15px 25px 15px 25px;
  border-right: 1px solid;
}

.status_box .good .block { border-color: #c3eec1; }
.status_box .medium .block { border-color: #fbf665; }
.status_box .bad .block { border-color: #faa; }

.status_box li.status {
  height: 44px;
  min-height: 29px;
  padding-top: 32px;
  padding-left: 37px;
  padding-right: 37px;
}

.status_box span.label {
  margin: 2px 0 0 0;
  display: block;
}
/* ... */

